[package]
name = "mayucss"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Alin <andreas.alin@gmail.com>"]
license = "MPL"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.4" }
lightningcss = { version = "1.0.0-alpha.39", features = ["serde", "visitor"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
base64 = "0.21.0"
